fixed headshot styling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,6 @@ body {
   left: 0;
   margin-left: auto;
   margin-right: auto;
-  max-width: 300px;
   max-height: 300px;
   border-radius: 50%;
 }
